<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".AlarmActivity">


    <rm.com.clocks.ClockImageView
        android:id="@+id/clock_alarm"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:hours="16"
        app:minutes="20"
        app:timeSetDuration="400"
        app:clockColor="?android:textColorSecondary"
        app:indeterminateSpeed="2"
        app:pointerWidth="bold"
        app:frameWidth="bold" />

    <TextView
        android:id="@+id/text_view_time_alarm"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Your Medicine Time"
        android:textSize="30sp"
        android:textStyle="bold"/>



    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/medicine"
          />

        <TextView
            android:id="@+id/text_view_medicine_name_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/medicine_name"
            android:textSize="26sp"
            android:textColor="@color/purple_700"
            android:textStyle="bold"/>

    </LinearLayout>


    <Button
        android:id="@+id/button_take"
        android:layout_margin="30dp"
        android:background="@drawable/btn_coner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/take"/>
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
         android:padding="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/button_snooze"
            android:textAllCaps="false"

            android:background="@drawable/btn_coner"
            android:layout_width="150dp"

            android:layout_height="wrap_content"
            android:text="@string/after10"/>

        <View
            android:layout_width="20dp"
            android:layout_height="2dp"/>

        <Button
            android:id="@+id/button_dismiss"

            android:textAllCaps="false"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_red"
            android:text="@string/dismiss"/>



    </LinearLayout>



</LinearLayout>